[gd_scene load_steps=2 format=2]

[ext_resource path="res://Tela_inicial.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 612.0
margin_top = 285.0
margin_right = 882.0
margin_bottom = 356.0
text = "Clique aqui para ver a sua lista"

[node name="dado1" type="LineEdit" parent="."]
margin_left = 606.0
margin_top = 97.0
margin_right = 685.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 86, 0 )

[node name="dado2" type="LineEdit" parent="."]
margin_left = 703.0
margin_top = 100.0
margin_right = 782.0
margin_bottom = 149.0

[node name="dado3" type="LineEdit" parent="."]
anchor_left = -0.5
anchor_top = 1.0
anchor_right = -0.5
anchor_bottom = 1.0
margin_left = 807.0
margin_top = 100.0
margin_right = 881.0
margin_bottom = 149.0

[node name="Label" type="Label" parent="."]
margin_left = 583.0
margin_top = 63.0
margin_right = 700.0
margin_bottom = 107.0
text = "dado 1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 687.0
margin_top = 64.0
margin_right = 804.0
margin_bottom = 108.0
text = "dado 2"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 780.0
margin_top = 65.0
margin_right = 897.0
margin_bottom = 109.0
text = "dado 3"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 588.0
margin_top = 157.0
margin_right = 898.0
margin_bottom = 274.0

[node name="resposta" type="Label" parent="ColorRect"]
modulate = Color( 0.0313726, 0.027451, 0.027451, 1 )
self_modulate = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
margin_left = 6.0
margin_right = 308.0
margin_bottom = 114.0
align = 1
valign = 1

[node name="ListaPreenchida" type="Button" parent="."]
margin_left = 177.0
margin_top = 198.0
margin_right = 414.0
margin_bottom = 260.0
text = "Veja a lista"

[node name="ListaPreenchida2" type="ColorRect" parent="."]
margin_left = 179.0
margin_top = 53.0
margin_right = 418.0
margin_bottom = 163.0

[node name="ListaPreenchidaResposta" type="Label" parent="ListaPreenchida2"]
margin_left = 21.0
margin_top = 12.0
margin_right = 220.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 613.0
margin_top = 15.0
margin_right = 875.0
margin_bottom = 68.0
text = "Preencha sua lista"
align = 1
valign = 1

[node name="Retornatexto" type="Button" parent="."]
margin_left = 667.0
margin_top = 513.0
margin_right = 860.0
margin_bottom = 577.0
text = "Clique para poder ler"

[node name="RetornaTextoPronto" type="ColorRect" parent="."]
margin_left = 645.0
margin_top = 395.0
margin_right = 876.0
margin_bottom = 502.0

[node name="retornaTexto" type="Label" parent="RetornaTextoPronto"]
margin_left = 5.0
margin_top = -1.0
margin_right = 232.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0.0352941, 0.00392157, 0.00392157, 1 )
align = 1
valign = 1

[node name="Label5" type="Label" parent="."]
margin_left = 179.0
margin_top = 290.0
margin_right = 423.0
margin_bottom = 323.0
text = "Insira alguma informação"
align = 1
valign = 1

[node name="RetornaInformacoes" type="Button" parent="."]
margin_left = 190.0
margin_top = 538.0
margin_right = 421.0
margin_bottom = 591.0
text = "Veja como ficou suas informações"

[node name="informacao" type="LineEdit" parent="."]
margin_left = 177.0
margin_top = 319.0
margin_right = 426.0
margin_bottom = 376.0

[node name="RetornaInformacaoUsuario" type="ColorRect" parent="."]
margin_left = 98.0
margin_top = 389.0
margin_right = 503.0
margin_bottom = 532.0

[node name="retornaResposta" type="Label" parent="RetornaInformacaoUsuario"]
margin_left = 2.0
margin_top = 8.0
margin_right = 391.0
margin_bottom = 138.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ListaPreenchida" to="." method="_on_ListaPreenchida_pressed"]
[connection signal="pressed" from="Retornatexto" to="." method="_on_Retornatexto_pressed"]
[connection signal="pressed" from="RetornaInformacoes" to="." method="_on_RetornaInformacoes_pressed"]
